Add fuzz targets for ShardSelector to enhance testing coverage
- Introduced three new fuzz targets: `shard_selector_arbitrary_ops`, `shard_selector_distribution`, and `shard_selector_property_tests` to test various operations and invariants of the ShardSelector data structure.
- Updated `Cargo.toml` to include the new fuzz targets, improving the testing framework's robustness.
- Enhanced `README.md` with detailed instructions on running the new fuzz tests, ensuring clarity for users.
- Added comprehensive comments in the fuzz target files to clarify testing objectives and expected behaviors.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -166,3 +166,24 @@ path = "fuzz_targets/lazy_heap_property_tests.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "shard_selector_arbitrary_ops"
+path = "fuzz_targets/shard_selector_arbitrary_ops.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "shard_selector_distribution"
+path = "fuzz_targets/shard_selector_distribution.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "shard_selector_property_tests"
+path = "fuzz_targets/shard_selector_property_tests.rs"
+test = false
+doc = false
+bench = false
