Add fuzz targets for SlotArena to enhance testing coverage
- Introduced three new fuzz targets: `slot_arena_arbitrary_ops`, `slot_arena_stress`, and `slot_arena_property_tests` to test various operations and invariants of the SlotArena data structure.
- Updated `Cargo.toml` to include the new fuzz targets, improving the testing framework's robustness.
- Enhanced `README.md` with detailed instructions on running the new fuzz tests, ensuring clarity for users.
- Added comprehensive comments in the fuzz target files to clarify testing objectives and expected behaviors.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -187,3 +187,24 @@ path = "fuzz_targets/shard_selector_property_tests.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "slot_arena_arbitrary_ops"
+path = "fuzz_targets/slot_arena_arbitrary_ops.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "slot_arena_stress"
+path = "fuzz_targets/slot_arena_stress.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "slot_arena_property_tests"
+path = "fuzz_targets/slot_arena_property_tests.rs"
+test = false
+doc = false
+bench = false
