Add library configuration in Cargo.toml for cachekit
- Defined library metadata in `Cargo.toml`, including name, path, and crate type, to facilitate building and testing the cache library.
- Enabled testing, documentation, and benchmarking features for improved development and performance evaluation.
- This change sets the foundation for further enhancements and ensures proper integration within the Rust ecosystem.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,15 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 targets = ["x86_64-unknown-linux-gnu"]
 
+[lib]
+name = "cachekit"
+path = "src/lib.rs"
+test = true
+doctest = true
+bench = true
+doc = true
+crate-type = ["lib"]
+
 [features]
 default = []
 metrics = []
