Update CI and release workflows to enhance testing coverage
- Modified CI workflow to include example tests alongside documentation tests, ensuring comprehensive coverage of all features.
- Updated release workflow to run only test cases, streamlining the testing process and improving clarity in the build output.
- Ensured that all tests are executed with the `--all-features` flag to validate the complete functionality of the library.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,11 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run doc tests
-        run: cargo test --doc
+        run: cargo test --doc --all-features
+      - name: Run example tests
+        run: cargo test --examples --all-features
       - name: Run tests
-        run: cargo test --all-features --all-targets
+        run: cargo test --tests --all-features
 
   # Run tests using Miri (curated subset)
   miri:
