--- a/bench-support/Cargo.toml
+++ b/bench-support/Cargo.toml
@@ -9,7 +9,7 @@ name = "render_docs"
 path = "src/bin/render_docs.rs"
 
 [dependencies]
-cachekit = { path = ".." }
+cachekit = { path = "..", features = ["policy-all"] }
 criterion = "0.8"
 rand = { version = "0.9", features = ["small_rng"] }
 rand_distr = "0.5"
