Update default feature flags in Cargo.toml for eviction policies
- Changed the default feature flags to include specific eviction policies: `policy-s3-fifo`, `policy_lru`, `policy-fast-lru`, `policy_lru_k`, and `policy-clock`.
- This update allows for more targeted usage of eviction strategies, enhancing modularity and performance based on expected workload patterns.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ doc = true
 crate-type = ["lib"]
 
 [features]
-default = ["policy-all"]
+default = ["policy-s3-fifo", "policy_lru", "policy-fast-lru", "policy_lru_k", "policy-clock"]
 metrics = []
 concurrency = ["parking_lot"]
 
