--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ doc = true
 crate-type = ["lib"]
 
 [features]
-default = ["policy-s3-fifo", "policy_lru", "policy-fast-lru", "policy_lru_k", "policy-clock"]
+default = ["policy-s3-fifo", "policy-lru", "policy-fast-lru", "policy-lru-k", "policy-clock"]
 metrics = []
 concurrency = ["parking_lot"]
 
