Add policy feature flags (#15)
* Add eviction policy feature flags for modular builds

- Introduced feature flags for various eviction policies in `Cargo.toml`, allowing users to enable only the necessary policies for smaller builds.
- Updated documentation to reflect the new feature flags and their descriptions, enhancing clarity on usage and configuration.
- Modified `bench-support/Cargo.toml` to utilize the `policy-all` feature for comprehensive benchmarking.
- Ensured that the new feature flags are integrated into the cache builder and prelude for seamless access to different policies.

* Update default feature flags in Cargo.toml for eviction policies

- Changed the default feature flags to include specific eviction policies: `policy-s3-fifo`, `policy_lru`, `policy-fast-lru`, `policy_lru_k`, and `policy-clock`.
- This update allows for more targeted usage of eviction strategies, enhancing modularity and performance based on expected workload patterns.

* Fix typo in default feature flags in Cargo.toml

- Corrected the naming convention of the `policy_lru` feature flag to `policy-lru` for consistency with other feature flags.
- This change enhances clarity and maintains uniformity in the feature flag naming scheme.

* Enhance documentation for eviction policy feature flags

- Updated README and various documentation files to clarify that each eviction policy is gated behind a feature flag, improving modularity for builds.
- Added feature flag details for each policy in the documentation, ensuring users can easily identify and enable the necessary policies for their use cases.
- Included examples for minimal builds and emphasized the benefits of targeted feature usage for performance optimization.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,48 @@ doc = true
 crate-type = ["lib"]
 
 [features]
-default = []
+default = ["policy-s3-fifo", "policy-lru", "policy-fast-lru", "policy-lru-k", "policy-clock"]
 metrics = []
 concurrency = ["parking_lot"]
+
+# Eviction policy feature flags. Enable only the policies you need for smaller builds.
+# Use `default-features = false` and select specific policies, or use `policy-all` for every policy.
+policy-all = [
+    "policy-fifo",
+    "policy-lru",
+    "policy-fast-lru",
+    "policy-lru-k",
+    "policy-lfu",
+    "policy-heap-lfu",
+    "policy-two-q",
+    "policy-s3-fifo",
+    "policy-arc",
+    "policy-lifo",
+    "policy-mfu",
+    "policy-mru",
+    "policy-random",
+    "policy-slru",
+    "policy-clock",
+    "policy-clock-pro",
+    "policy-nru",
+]
+policy-fifo = []
+policy-lru = []
+policy-fast-lru = []
+policy-lru-k = []
+policy-lfu = []
+policy-heap-lfu = []
+policy-two-q = []
+policy-s3-fifo = []
+policy-arc = []
+policy-lifo = []
+policy-mfu = []
+policy-mru = []
+policy-random = []
+policy-slru = []
+policy-clock = []
+policy-clock-pro = []
+policy-nru = []
 
 [dependencies]
 parking_lot = { version = "0.12", optional = true }
