Add policy-car feature flag to Cargo.toml
- Introduced the `policy-car` feature flag in `Cargo.toml` to enable the new CAR (Clock with Adaptive Replacement) eviction policy.
- Updated the `policy-all` list to include `policy-car`, ensuring it is available for modular builds.
- This change enhances the flexibility of the library by allowing users to selectively enable the CAR policy based on their workload requirements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ policy-all = [
     "policy-two-q",
     "policy-s3-fifo",
     "policy-arc",
+    "policy-car",
     "policy-lifo",
     "policy-mfu",
     "policy-mru",
@@ -67,6 +68,7 @@ policy-heap-lfu = []
 policy-two-q = []
 policy-s3-fifo = []
 policy-arc = []
+policy-car = []
 policy-lifo = []
 policy-mfu = []
 policy-mru = []
